add blog category

--- a/_posts/2018-05-10-00-n-queens-O(n).md
+++ b/_posts/2018-05-10-00-n-queens-O(n).md
@@ -4,7 +4,7 @@ title:  "n-queens with O(n) space complexity"
 date:   2018-06-16
 desc: "An O(n) solution to the famous n-queens problem."
 keywords: "DS,Data,Structures,algorithms,Computer"
-categories: [Python]
+categories: [Python,Data-structures]
 tags: [Data Structures, n-queens]
 icon: fa-code
 ---
